# deuscode

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.claude/commands/: critic.md  review.md  ship.md  test.md
.claude/skills/: critic.md  dev.md  reviewer.md  tester.md
.claude/skills/critic/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/ship/: SKILL.md
.claude/skills/test/: SKILL.md
src/deuscode/: action_plan.py  agent.py  chat.py  complexity.py  config.py  context_loader.py  main.py  model_manager.py  models.py  planner.py  repomap.py  resource_selector.py  runpod.py  setup.py  tools.py  ui.py
src/deuscode/endpoints/: __init__.py  base.py  factory.py  job_client.py  pod.py  serverless.py
src/deuscode/search/: __init__.py  base.py  brave.py  duckduckgo.py  factory.py  fetcher.py
tests/: test_action_plan.py  test_agent.py  test_chat.py  test_complexity.py  test_config.py  test_context_loader.py  test_model_manager.py  test_models.py  test_planner.py  test_repomap.py  test_resource_selector.py  test_runpod.py  test_setup.py  test_tools.py  test_ui.py
tests/endpoints/: test_factory.py  test_job_client.py  test_serverless.py
tests/search/: test_duckduckgo.py  test_factory.py  test_fetcher.py
